FEAT:created, delete playlist, video add and remove from playlist

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,16 @@
       rel="stylesheet"
       href="https://unpkg.com/mockman-js@latest/dist/style.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
-    />
+    /> -->
+    <script
+      src="https://kit.fontawesome.com/3582c9ec8a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
